Madhu Sir changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,10 @@
       <a [routerLink]="['somepath']" class="dashboard-nav-item"><i class="fa fa-file-upload"></i> Upload </a>
       <a [routerLink]="['UserReg']" class="dashboard-nav-item"><i class="fa fa-file-upload"></i> UserReg </a>
       <a [routerLink]="['Stepper']" class="dashboard-nav-item"><i class="fa fa-file-upload"></i> Stepper </a>
+      <a [routerLink]="['InstitutionTimeline']" class="dashboard-nav-item"><i class="fa fa-file-upload"></i> InstitutionTimeline </a>
       
       
+      <a [routerLink]="['InstitutionTask']" class="dashboard-nav-item"><i class="fa fa-file-upload"></i> InstitutionTask </a>
       <!-- <div class='dashboard-nav-dropdown'><a  class="dashboard-nav-item dashboard-nav-dropdown-toggle"><i
               class="fa fa-photo-video"></i> Media </a>
           <div class='dashboard-nav-dropdown-menu'><a [routerLink]="['somepath']"
