--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -248,6 +248,6 @@
 
 <div class='dashboard'>
     <div class="dashboard-nav">
-        <app-side-menu [menuItems]="TreeData"></app-side-menu>
+        <app-side-menu [TreeData]="TreeData"></app-side-menu>    
     </div>
 </div>
