--- a/src/app/components/institutionaddress/institutionaddress.component.html
+++ b/src/app/components/institutionaddress/institutionaddress.component.html
@@ -74,7 +74,7 @@
                     <div class="col-md-3">
                         <select name="" id="" [(ngModel)]="institutionaddress.MeduimId" class="form-control">
                             <option value="0">Select</option>
-                            <option *ngFor="let  item of mediumData" value="{{item.Id}}">{{item.Medium1}}</option>
+                            <option *ngFor="let  item of mediumData" value="{{item.Id}}">{{item.Name}}</option>
                         </select>
                     </div>
                 </div>
