--- a/src/app/components/institiutionDetails/institution-reg/institution-reg.component.css
+++ b/src/app/components/institiutionDetails/institution-reg/institution-reg.component.css
@@ -58,3 +58,10 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+div.card{
+  margin-top: 9px;
+}
+
+div.row{
+  padding-bottom: 10px;
+}
