--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -291,6 +291,7 @@
             class="fa fa-building"></i> COMPANY </a>
         <div class='dashboard-nav-dropdown-menu'>
           <a [routerLink]="['company']" class="dashboard-nav-dropdown-item">Company</a>
+          <a [routerLink]="['companyJobPost']" class="dashboard-nav-dropdown-item">CompanyJobPost</a>
           <a [routerLink]="['companyemails']" class="dashboard-nav-dropdown-item">Email</a>
           <a [routerLink]="['companycontacts']" class="dashboard-nav-dropdown-item">Contacts</a>
           <a [routerLink]="['companyaddress']" class="dashboard-nav-dropdown-item">Address</a>
